--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html>
 <head>
     <meta charset="utf-8">
-    <title>Black Goose Bistro</title>
+    <title>White Goose Bistro</title>
     <style>
         body{
             background-color: #D1F8F8;
@@ -24,17 +24,17 @@
 </head>
 <body>
     <h1>
-        <img src="blackgoose.png" alt="logo">
-        <br>Black Goose Bistro
+        <img src="whitegoose.png" alt="logo">
+        <br>White Goose Bistro
     </h1>
 
     <h2>The Restaurant</h2>
-        <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. 
+        <p>The White Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. 
         The menu changes regularly to highlight the freshest local ingredients.</p>
 
     <h2>Catering</h2>
         <p>You have fun. <em>We'll handle the cooking.</em>
-        Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
+        White Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
 
     <h2>Location and Hours</h2>
         <p>Seekonk, Massachusetts;<br>
